removing doing demean twice

--- a/AR_methods/batchsize_comparison.html
+++ b/AR_methods/batchsize_comparison.html
@@ -539,7 +539,7 @@ batchSize_threshold_R &lt;- function(x, method = &quot;bm&quot;, g = NULL)
   # xacf &lt;- acf(chain, type = &quot;covariance&quot;, lag.max = order.max, plot = FALSE,
   #               demean=TRUE, na.action = na.pass)$acf
   
-  b = batchsize_cpp(chain, xacf, order.max, method)
+  b = batchsize_cpp(n, p, xacf, order.max, method)
   return(b)
 }</code></pre>
 <pre class="r"><code>batchSize_threshold_cpp_last &lt;- function(x, method = &quot;bm&quot;, g = NULL) {
@@ -548,8 +548,8 @@ batchSize_threshold_R &lt;- function(x, method = &quot;bm&quot;, g = NULL)
     stop(&quot;&#39;x&#39; must be numeric&quot;)
   if(any(is.na(x) != is.na(x[,1]))) stop(&quot;NAs in &#39;x&#39; must be the same row-wise&quot;)
   p &lt;- ncol(x)
-  xm &lt;- colMeans(x, na.rm=TRUE)
-  x &lt;- sweep(x, 2L, xm, check.margin=FALSE)
+  # xm &lt;- colMeans(x, na.rm=TRUE)
+  # x &lt;- sweep(x, 2L, xm, check.margin=FALSE)
   n &lt;- sum(!is.na(x[,1])) # number of non-missing rows
   chain &lt;- as.matrix(x)
   if(!is.matrix(chain) &amp;&amp; !is.data.frame(chain))
@@ -570,14 +570,15 @@ batchSize_threshold_R &lt;- function(x, method = &quot;bm&quot;, g = NULL)
   order.max &lt;- min(p, n - 1L, floor(10 * log10(n))) 
   xacf = matrix(, nrow = order.max+1, ncol = p)
   last = min(n, 1e4)
+  chain2 = chain[(n-last+1):n,]
   for(i in 1:p) {
-    xacf[,i] = acf(chain[(n - last+1):n,i], type = &quot;covariance&quot;, lag.max = order.max, plot = FALSE,
+    xacf[,i] = acf(chain2[,i], type = &quot;covariance&quot;, lag.max = order.max, plot = FALSE,
                  demean=TRUE, na.action = na.pass)$acf
   }
   # xacf &lt;- acf(chain, type = &quot;covariance&quot;, lag.max = order.max, plot = FALSE,
   #               demean=TRUE, na.action = na.pass)$acf
   
-  b = batchsize_cpp(chain, xacf, order.max, method)
+  b = b = batchsize_cpp(n, p, xacf, order.max, method)
   return(b)
 }</code></pre>
 <pre class="r"><code>n = 1e3
@@ -588,15 +589,15 @@ ans = RWMH(n, init, h)</code></pre>
 <pre><code>## [1] 0.388</code></pre>
 <pre class="r"><code>benchmark(replications = 1e1, batchSize_threshold_cpp_last(ans), batchSize_threshold_cpp(ans), batchSize_threshold_R(ans), batchSize(ans))</code></pre>
 <pre><code>##                                test replications elapsed relative user.self
-## 4                    batchSize(ans)           10    6.39    2.766      5.97
-## 2      batchSize_threshold_cpp(ans)           10    2.75    1.190      2.43
-## 1 batchSize_threshold_cpp_last(ans)           10    2.31    1.000      2.17
-## 3        batchSize_threshold_R(ans)           10    5.30    2.294      4.92
+## 4                    batchSize(ans)           10    5.70    3.295      5.59
+## 2      batchSize_threshold_cpp(ans)           10    1.91    1.104      1.89
+## 1 batchSize_threshold_cpp_last(ans)           10    1.73    1.000      1.72
+## 3        batchSize_threshold_R(ans)           10    4.33    2.503      4.24
 ##   sys.self user.child sys.child
-## 4     0.09         NA        NA
-## 2     0.04         NA        NA
-## 1     0.00         NA        NA
-## 3     0.08         NA        NA</code></pre>
+## 4     0.10         NA        NA
+## 2     0.01         NA        NA
+## 1     0.02         NA        NA
+## 3     0.06         NA        NA</code></pre>
 <pre class="r"><code>n = 1e6
 p = 20
 init = numeric(p)
@@ -605,15 +606,15 @@ ans = RWMH(n, init, h)</code></pre>
 <pre><code>## [1] 0.128769</code></pre>
 <pre class="r"><code>benchmark(replications = 1e1, batchSize_threshold_cpp_last(ans), batchSize_threshold_cpp(ans), batchSize_threshold_R(ans), batchSize(ans))</code></pre>
 <pre><code>##                                test replications elapsed relative user.self
-## 4                    batchSize(ans)           10   90.25    7.208     78.41
-## 2      batchSize_threshold_cpp(ans)           10   32.49    2.595     28.75
-## 1 batchSize_threshold_cpp_last(ans)           10   12.52    1.000     10.86
-## 3        batchSize_threshold_R(ans)           10   36.91    2.948     28.44
+## 4                    batchSize(ans)           10   92.51   45.571     80.49
+## 2      batchSize_threshold_cpp(ans)           10   32.02   15.773     28.73
+## 1 batchSize_threshold_cpp_last(ans)           10    2.03    1.000      1.58
+## 3        batchSize_threshold_R(ans)           10   38.20   18.818     29.31
 ##   sys.self user.child sys.child
-## 4    11.65         NA        NA
-## 2     3.63         NA        NA
-## 1     1.65         NA        NA
-## 3     8.32         NA        NA</code></pre>
+## 4    11.78         NA        NA
+## 2     3.21         NA        NA
+## 1     0.43         NA        NA
+## 3     8.77         NA        NA</code></pre>
 <pre class="r"><code>adjust_matrix &lt;- function(mat, N, epsilon = sqrt(log(N)/dim(mat)[2]), b = 9/10)
 {
   mat.adj &lt;- mat
@@ -670,15 +671,15 @@ ans2 = RWMH_new(n, init, h)</code></pre>
 <pre><code>## [1] 0.999999</code></pre>
 <pre class="r"><code>benchmark(replications = 1e1, batchSize_threshold_cpp_last(ans), batchSize_threshold_cpp(ans), batchSize_threshold_R(ans), batchSize(ans))</code></pre>
 <pre><code>##                                test replications elapsed relative user.self
-## 4                    batchSize(ans)           10   91.12    7.481     78.43
-## 2      batchSize_threshold_cpp(ans)           10   32.16    2.640     28.55
-## 1 batchSize_threshold_cpp_last(ans)           10   12.18    1.000     10.44
-## 3        batchSize_threshold_R(ans)           10   36.79    3.021     28.66
+## 4                    batchSize(ans)           10   92.16   45.624     78.75
+## 2      batchSize_threshold_cpp(ans)           10   31.22   15.455     28.06
+## 1 batchSize_threshold_cpp_last(ans)           10    2.02    1.000      1.57
+## 3        batchSize_threshold_R(ans)           10   37.54   18.584     28.17
 ##   sys.self user.child sys.child
-## 4    12.41         NA        NA
-## 2     3.58         NA        NA
-## 1     1.73         NA        NA
-## 3     8.11         NA        NA</code></pre>
+## 4    13.03         NA        NA
+## 2     3.06         NA        NA
+## 1     0.46         NA        NA
+## 3     9.23         NA        NA</code></pre>
 
 
 
